k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: geography-api
  labels:
    app: geography-api
