k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geography-api
  namespace: geography-api
  labels:
    app: geography-api
spec:
  type: ClusterIP
  selector:
    app: geography-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
